[package]
name = "d3caf-rust-miner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "single"
path = "src/single/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.5.3"
hex = "0.4.3"
rayon = "1.5.1"
rand = "0.8.5"